Fix images not correctly displaying and Typo

--- a/recipes/baked-potato.html
+++ b/recipes/baked-potato.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Baked Potato</h1>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.foodandwine.com%2Fbaked-potato-7559551&psig=AOvVaw380fHSRDT2e5-RLmeHwvHn&ust=1709294040387000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCJDqqK6-0IQDFQAAAAAdAAAAABAE"A picture of the Baked Potato dish over a plate. It looks delicious">
+    <img src="https://www.foodandwine.com/thmb/WmSqUqk2hR42aez4_mff5veGjlY=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/How-To-Bake-A-Potato-FT-BLOG0623-1b01215c4a2c4cf9bb26f395a738a20d.jpg" alt="A picture of the Baked Potato dish over a plate. It looks delicious">
     <h2>Description</h2>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
     <h2>Ingredients</h2>
