--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fthecozycook.com%2Feasy-lasagna-recipe%2F&psig=AOvVaw3Owfx9-oJwY8KZjau7AFBT&ust=1709292826144000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOi-kuu50IQDFQAAAAAdAAAAABAE" alt="A picture of the Lasagna dish over a plate. It looks delicious">
+    <img src="https://www.allrecipes.com/thmb/nb2eEifCwlw1yc5gnXMwBy4BkXQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/23600-worlds-best-lasagna-DDMFS-2x1-1193-40ded59b2a224312b66bdafbb885adc0.jpg" alt="A picture of the Lasagna dish over a plate. It looks delicious">
     <h2>Description</h2>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
     <h2>Ingredients</h2>
