--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Meatballs</h1>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.budgetbytes.com%2Fhomemade-meatballs%2F&psig=AOvVaw3uXJeoaI_qdr4k4T1qFaeb&ust=1709293720497000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCID1_Jm90IQDFQAAAAAdAAAAABAE" alt="A picture of the Meatballs dish over a plate. It looks delicious">
+    <img src="https://www.allrecipes.com/thmb/nfsxdMIw15rqnVtl5LllGZe0KkY=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/40399-The-Best-Meatballs-ddmfs-4x3-080-858db61ac9d645b4880adf6417035ad0.jpg" alt="A picture of the Meatballs dish over a plate. It looks delicious">
     <h2>Description</h2>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
     <h2>Ingredients</h2>
